Assistant checkpoint: Update form labels from Visibility to Is Document?
Assistant generated file changes:
- templates/document_types.html: Change Visibility label to Is Document?, Change Visibility label to Is Document? in edit modal

---

User prompt:

por favor ajustar o modal, e trocar o  labeal Visibility para  Is Document ?

--- a/templates/document_types.html
+++ b/templates/document_types.html
@@ -44,7 +44,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label>Visibility</label>
+                <label>Is Document?</label>
                 <div class="radio-group">
                     <label class="radio-label">
                         <input type="radio" name="public" value="true" checked>
@@ -91,7 +91,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label>Visibility</label>
+                <label>Is Document?</label>
                 <div class="radio-group">
                     <label class="radio-label">
                         <input type="radio" name="public" value="true" id="editPublicTrue">
